# beatreel

./: .gitignore  README.md
backend/: main.py  pyproject.toml  pytest.ini
backend/beatreel/: __init__.py  aspect.py  auto_clipper.py  beats.py  cache.py  cli.py  director.py  gemini_detector.py  gemini_music_analyzer.py  gemini_pool.py  highlights.py  medal.py  pipeline.py  render.py  scenes.py  valorant.py  youtube.py
backend/tests/: conftest.py  test_api.py  test_aspect.py  test_auto_clipper_e2e.py  test_beats.py  test_cache.py  test_director_e2e.py  test_director_validation.py  test_highlights.py  test_integration.py  test_medal.py  test_plan_json.py  test_scenes.py  test_smoke.py  test_youtube.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AspectPicker.tsx  BeatVisualizer.tsx  DropZone.tsx  DurationSlider.tsx  GamePicker.tsx  HistoryPanel.tsx  IntensityPicker.tsx  Logo.tsx  MedalPicker.tsx  ProgressPanel.tsx  ResultPanel.tsx  SegmentedControl.tsx  SettingsModal.tsx  SourceTabs.tsx  YouTubeInput.tsx
frontend/lib/: api.ts  settings.ts
