[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "beatreel"
version = "0.1.0"
description = "Auto highlight reels synced to a beat."
requires-python = ">=3.11"
dependencies = [
  "librosa>=0.10.2",
  "numpy>=1.26",
  "scipy>=1.11",
  "click>=8.1",
  "tqdm>=4.66",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "yt-dlp>=2024.5.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
beatreel = "beatreel.cli:main"

[tool.setuptools.packages.find]
include = ["beatreel*"]
